@@ -253,7 +253,8 @@ namespace libtorrent { namespace dht
 	// defined in node.cpp
 	extern void nop();
 
-	void dht_tracker::start(entry const& bootstrap)
+	void dht_tracker::start(entry const& bootstrap
+		, find_data::nodes_callback const& f)
 	{
 		TORRENT_ASSERT(m_ses.is_network_thread());
 		std::vector<udp::endpoint> initial_nodes;
@@ -276,7 +277,7 @@ namespace libtorrent { namespace dht
 
 		m_refresh_timer.expires_from_now(seconds(5), ec);
 		m_refresh_timer.async_wait(boost::bind(&dht_tracker::refresh_timeout, self(), _1));
-		m_dht.bootstrap(initial_nodes, boost::bind(&libtorrent::dht::nop));
+		m_dht.bootstrap(initial_nodes, f);
 	}
 
 	void dht_tracker::stop()
